objects/smlfcom__SML_Security_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>smlfcom__Is_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Show_Configuration_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Configuration View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Show_Forecast_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Forecast View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Show_Global_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Global Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Use_Custom_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Use_Trending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Trending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Use_custom_Waterfall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use custom Waterfall</label>
        <type>Checkbox</type>
    </fields>
    <label>SML Security Configuration</label>
</CustomObject>